# applytrack_ai

./: .gitignore  app.py  main.py  pyproject.toml
src/agent/: session.py  tracker.py
src/authentication/: google_auth.py  test_authentication.py
src/config/: settings.py
src/prompt/: tracker_prompt.py
src/services/: gmail_service.py  sheets_service.py
src/tools/: add_sheet.py  all_tools.py  append_rows.py  application_updates.py  clear_range.py  delete_sheet.py  drive_service.py  execute_code.py  find_application_by_company.py  get_email.py  get_spreadsheet_schema.py  open_spreadsheet.py  read_formatting.py  read_range.py  rename_spreadsheet.py  search_emails.py  sheets_service.py  update_application_from_email.py  write_range.py
