[project]
name = "applytrack-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.198.0",
    "google-auth>=2.56.0",
    "google-auth-oauthlib>=1.4.0",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "openai-agents>=0.18.2",
    "pydantic>=2.13.4",
    "pyfiglet>=1.0.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
]
